Deployable to Heroku!

--- a/MawBlog/appsettings.json
+++ b/MawBlog/appsettings.json
@@ -1,6 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MawBlog-3E8E68B0-1584-4A90-AA93-A01BF84115D9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MawBlog-3E8E68B0-1584-4A90-AA93-A01BF84115D9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MawBlog;User Id=postgres; Password=Mweaver1!"
+  },
+  "PostgreSQL": {
+    "Server": "localhost",
+    "Port": "5432",
+    "UserId": "postgres",
+    "Password": "LearnToCodeNow!",
+    "Database": "Blog"
   },
   "Logging": {
     "LogLevel": {
