--- a/MawBlog/appsettings.json
+++ b/MawBlog/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MawBlog-3E8E68B0-1584-4A90-AA93-A01BF84115D9;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MawBlog;User Id=postgres; Password=Mweaver1!"
+    "DefaultConnection": "Server=localhost; Port=5432; Database=MawBlog; User Id=postgres; Password=Mweaver1!;"
   },
   "PostgreSQL": {
     "Server": "localhost",
